fix upgrade folder

--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -191,7 +191,7 @@ Create the folder for the upgrade binary (`v2.0.0`) and copy the `regen` binary 
 
 ```
 mkdir -p $HOME/.regen/cosmovisor/upgrade/v2.0-upgrade/bin
-cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/genesis/bin
+cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrade/v2.0-upgrade/bin
 ```
 
 At the proposed block height, `cosmovisor` will automatically stop the current binary (`v1.0.0`), set the upgrade binary as the new current binary (`v2.0.0`), and then restart the node.
