Apply suggestions from code review
Co-authored-by: Cory <cjlevinson@gmail.com>

--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -32,11 +32,11 @@ Regen Ledger v2.0 introduces breaking changes. In order to upgrade a live networ
 
 The expected version and the upgrade height are defined within a [software upgrade](https://docs.cosmos.network/master/modules/gov/01_concepts.html#software-upgrade) proposal. If the proposal passes, the chain will halt at the proposed upgrade height. At this point, node operators will need to stop running the current binary and start running the upgrade binary.
 
-We recommend node operators use [Cosmovisor](https://docs.cosmos.network/master/run-node/cosmovisor.html), which is a process manager for running application binaries. When the chain halts at the proposed upgrade height, Cosmovisor will automatically stop the current binary and start the upgrade binary. Node operators can prepare the upgrade binary ahead of time and then relax at the time of the upgrade.
+We recommend node operators use [Cosmovisor](https://docs.cosmos.network/master/run-node/cosmovisor.html), which is a process manager for running a blockchain's application binary. When the chain halts at the proposed upgrade height, Cosmovisor will automatically stop the current binary and start the upgrade binary. Node operators can prepare the upgrade binary ahead of time and then relax at the time of the upgrade.
 
 ### In-Place Store Migrations
 
-The upgrade to Regen Ledger v2.0 leverages a new feature introduced in Cosmos SDK v0.43 called ["In-Place Store Migrations"](https://docs.cosmos.network/master/core/upgrade.html). This new feature prevents the need for node operators to restart the chain using an updated genesis file. Regen Ledger includes a [`registerUpgradeHandlers`](https://github.com/regen-network/regen-ledger/blob/master/app/stable_appconfig.go#L50-L100) method that performs the necessary state migrations in-place.
+The upgrade to Regen Ledger v2.0 leverages a new feature introduced in Cosmos SDK v0.43 called ["In-Place Store Migrations"](https://docs.cosmos.network/master/core/upgrade.html). This new feature prevents the need for node operators to restart the chain using an updated genesis file. Regen Ledger includes a [`registerUpgradeHandlers()`](https://github.com/regen-network/regen-ledger/blob/master/app/stable_appconfig.go#L50-L100) method that registers handlers for performing an upgrade's necessary state migrations in-place.
 
 ## Upgrade Guidelines
 
@@ -49,7 +49,7 @@ We recommend updating to the latest version of Go `1.17`. For more information, 
 We recommend **Cosmovisor v1.0 with the auto-download option disabled**. Node operators will need to prepare the upgrade binary in advance.
 
 ::: warning
-The auto-download option is not supported in Cosmovisor v1.0 when upgrading from a software version that uses Cosmos SDK v0.42. Enabling the auto-download option in these circumstances will result in an error and a failed restart at the time of the upgrade.
+The auto-download option is not supported in Cosmovisor v1.0 when upgrading from Regen Ledger 1.0 (because it uses Cosmos SDK v0.42). Enabling the auto-download option in these circumstances will result in an error and a failed restart at the time of the upgrade.
 :::
 
 #### Cosmovisor Not Installed
