add cosmovior note

--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -68,6 +68,8 @@ Check to ensure the install was successful:
 cosmovisor version
 ```
 
+*Note: The above command should print out information about cosmovisor and multiple configuration errors. This is expected using the latest version of cosmovisor (`v1.0.0`) and can be ignored for the purpose of checking the install was successful.* 
+
 Create the directory for the genesis binary (`v1.0.0`) and copy the `regen` binary (assuming that the `regen` binary is already installed and stored in the `$GOBIN` directory):
 
 ```
@@ -88,7 +90,7 @@ Create the directory for the upgrade binary (`v2.0.0`) and copy the `regen` bina
 
 ```
 mkdir -p $HOME/.regen/cosmovisor/upgrade/v2.0-upgrade/bin
-cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/genesis/bin
+cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrade/v2.0-upgrade/bin
 ```
 
 Create `cosmovisor` systemd service file:
@@ -137,6 +139,8 @@ At the proposed block height, `cosmovisor` will automatically stop the current b
 
 #### Cosmovisor Already Installed
 
+The following instructions assume `cosmovisor` is already installed.
+
 Make sure Cosmovisor is up-to-date:
 
 ```
@@ -148,6 +152,8 @@ Check to ensure the install was successful:
 ```
 cosmovisor version
 ```
+
+*Note: The above command should print out information about cosmovisor and multiple configuration errors. This is expected using the latest version of cosmovisor (`v1.0.0`) and can be ignored for the purpose of checking the install was successful.* 
 
 Update `cosmovisor` systemd service file and make sure the environment variables are set to the appropriate values (assuming that `cosmovisor` has been set up as a systemd service):
 
