--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -14,7 +14,7 @@ This section will be updated once the official release has been published and th
 
 ### Regen Ledger v2.0
 
-- [Release Notes]()
+- [Release Notes](https://github.com/regen-network/regen-ledger/releases/tag/v2.0.0)
 
 ### Redwood Testnet
 
@@ -81,7 +81,7 @@ Either download the upgrade binary (`v2.0.0`) or build it from source:
 
 ```
 cd regen-ledger
-git fetch -all
+git fetch --all
 git checkout v2.0.0
 make build
 ```
@@ -89,8 +89,8 @@ make build
 Create the directory for the upgrade binary (`v2.0.0`) and copy the `regen` binary (assuming that the `regen` binary was built from source and stored in the `build` directory):
 
 ```
-mkdir -p $HOME/.regen/cosmovisor/upgrade/v2.0-upgrade/bin
-cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrade/v2.0-upgrade/bin
+mkdir -p $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
+cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
 ```
 
 Create `cosmovisor` systemd service file:
@@ -188,7 +188,7 @@ Either download the upgrade binary (`v2.0.0`) or build it from source:
 
 ```
 cd regen-ledger
-git fetch -all
+git fetch --all
 git checkout v2.0.0
 make build
 ```
@@ -196,8 +196,8 @@ make build
 Create the folder for the upgrade binary (`v2.0.0`) and copy the `regen` binary (assuming that the `regen` binary was built from source and stored in the `build` directory):
 
 ```
-mkdir -p $HOME/.regen/cosmovisor/upgrade/v2.0-upgrade/bin
-cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrade/v2.0-upgrade/bin
+mkdir -p $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
+cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
 ```
 
 At the proposed block height, `cosmovisor` will automatically stop the current binary (`v1.0.0`), set the upgrade binary as the new current binary (`v2.0.0`), and then restart the node.
@@ -212,7 +212,7 @@ Either download the upgrade binary (`v2.0.0`) or build it from source:
 
 ```
 cd regen-ledger
-git fetch -all
+git fetch --all
 git checkout v2.0.0
 make install
 ```
