--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -8,22 +8,17 @@ The upgrade on Regen Mainnet will be preceded by an upgrade on Redwood Testnet t
 
 ## Upgrade Details
 
-::: tip COMING SOON
-This section will be updated once the official release has been published and the governance proposal for each network has been submitted.
-:::
-
 ### Regen Ledger v2.0
 
 - [Release Notes](https://github.com/regen-network/regen-ledger/releases/tag/v2.0.0)
 
-### Redwood Testnet
-
-- [Upgrade Proposal]()
-- Upgrade Height: `TBD`
-
 ### Regen Mainnet
 
-- [Upgrade Proposal]()
+- [Upgrade Proposal](https://wallet.keplr.app/#/regen/governance?detailId=5)
+- Upgrade Height: `2989441`
+
+### Redwood Testnet
+
 - Upgrade Height: `TBD`
 
 ## Upgrade Overview
