Apply suggestions from code review

--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -37,11 +37,11 @@ The upgrade to Regen Ledger v2.0 leverages a new feature introduced in Cosmos SD
 
 ### Update Go
 
-Please update to the latest version of Go `1.17`. For more information, see [Go](https://golang.org/).
+The latest version of Go (`1.17`) is required. For more information, see [Go](https://golang.org/).
 
 ### Option 1: Using Cosmovisor
 
-Please use **Cosmovisor v1.0 with the auto-download option disabled**. Node operators must prepare the upgrade binary in advance.
+**Cosmovisor v1.0 with the auto-download option disabled** is required. Node operators must prepare the upgrade binary in advance.
 
 ::: warning
 The auto-download option is not supported in Cosmovisor v1.0 when upgrading from Regen Ledger 1.0 (because it uses Cosmos SDK v0.42). Cosmovisor v0.1 supports the auto-download option but it will not work with the proposal due to an issue with unwanted whitespace in the `upgrade-info` field. Enabling the auto-download option will result in an error and a failed restart at the time of the upgrade.
