--- a/docs/migrations/v3.0-upgrade.md
+++ b/docs/migrations/v3.0-upgrade.md
@@ -1,25 +1,25 @@
-# Upgrade Guide v2.0
+# Upgrade Guide v3.0
 
-This document provides guidelines for node operators upgrading from Regen Ledger v1.0 to v2.0. For a general overview of the upgrade process, please refer to [Upgrade Overview](./upgrade.md).
+This document provides guidelines for node operators upgrading from Regen Ledger v2.1 to v3.0. For a general overview of the upgrade process, please refer to [Upgrade Overview](./upgrade.md).
 
 ## Upgrade Details
 
-### Regen Ledger v2.0
+### Regen Ledger v3.0
 
-- [Release Notes](https://github.com/regen-network/regen-ledger/releases/tag/v2.0.0)
+- [Release Notes](https://github.com/regen-network/regen-ledger/releases/tag/v3.0.0)
 
 ### Regen Mainnet
 
-- [Upgrade Proposal](https://wallet.keplr.app/#/regen/governance?detailId=5)
-- Upgrade Height: `3003343`
+- [Upgrade Proposal](https://wallet.keplr.app/#/regen/governance?detailId=9)
+- Upgrade Height: `4623339`
 
 ### Redwood Testnet
 
-- Upgrade Height: `548703`
+- Upgrade Height: `TBD`
 
 ### Upgrade Handler
 
-- [Upgrade Handler](https://github.com/regen-network/regen-ledger/blob/v2.0.0/app/stable_appconfig.go#L52-L103)
+- [Upgrade Handler](https://github.com/regen-network/regen-ledger/blob/v3.0.0/app/stable_appconfig.go#L46-L64)
 
 ## Upgrade Guidelines
 
@@ -30,12 +30,6 @@ The latest version of Go (`1.17`) is required. For more information, see [Go](ht
 ### Option 1: Using Cosmovisor
 
 The following instructions assume `regen` and `cosmovisor` are already installed and `cosmovisor` is set up as a systemd service. If this is not the case, please refer to the [Running a Validator](../getting-started/running-a-validator.md#install-cosmovisor) for more information.
-
-**Cosmovisor v1.0 with the auto-download option disabled is required. Node operators must prepare the upgrade binary in advance.**
-
-::: warning
-The auto-download option is not supported in Cosmovisor v1.0 when upgrading from Regen Ledger 1.0 (because it uses Cosmos SDK v0.42). Enabling the auto-download option will result in an error and a failed restart at the time of the upgrade.
-:::
 
 Make sure Cosmovisor is up-to-date:
 
@@ -58,8 +52,8 @@ After=network-online.target
 [Service]
 Environment="DAEMON_NAME=regen"
 Environment="DAEMON_HOME=${HOME}/.regen"
-Environment="DAEMON_RESTART_AFTER_UPGRADE=true"
 Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=false"
+Environment="DAEMON_RESTART_AFTER_UPGRADE=true"
 Environment="UNSAFE_SKIP_BACKUP=false"
 User=${USER}
 ExecStart=${GOBIN}/cosmovisor start
@@ -69,6 +63,12 @@ LimitNOFILE=4096
 [Install]
 WantedBy=multi-user.target
 " >cosmovisor.service
+```
+
+Cosmovisor has the ability to automatically download the upgrade binaries if the `upgrade-info` is properly set within the upgrade proposal. It is recommended that validators do not use the auto-download option and that the upgrade binary is prepared manually. If you would still like to enable the auto-download option, update the following environment variable in the systemd configuration:
+
+```
+Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=true"
 ```
 
 Cosmovisor will automatically create a backup of the `data` directory at the time of the upgrade and before the migration begins. It is recommended that validators create a backup of the data directory. If you would like to disable the auto-back, update the following environment variable in the systemd configuration:
@@ -85,23 +85,23 @@ sudo systemctl daemon-reload
 sudo systemctl start cosmovisor
 ```
 
-Either download the upgrade binary (`v2.0.0`) or build it from source:
+Either download the upgrade binary (`v3.0.0`) or build it from source:
 
 ```
 cd regen-ledger
 git fetch --all
-git checkout v2.0.0
+git checkout v3.0.0
 make build
 ```
 
-Create the folder for the upgrade binary (`v2.0.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory:
+Create the folder for the upgrade binary (`v3.0.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory and that the auto-download option was not enabled:
 
 ```
-mkdir -p $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
-cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
+mkdir -p $HOME/.regen/cosmovisor/upgrades/v3.0.0/bin
+cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrades/v3.0.0/bin
 ```
 
-At the proposed block height, `cosmovisor` will automatically stop the current binary (`v1.0.0`), set the upgrade binary as the new current binary (`v2.0.0`), and then restart the node.
+At the proposed block height, `cosmovisor` will automatically stop the current binary (`v2.1.0`), set the upgrade binary as the new current binary (`v3.0.0`), and then restart the node.
 
 ### Option 2: Without Cosmovisor
 
@@ -109,12 +109,12 @@ Using Cosmovisor to perform the upgrade is not required. Node operators also hav
 
 When the chain halts at the proposed upgrade height, stop the current process running `regen`.
 
-Either download the upgrade binary (`v2.0.0`) or build it from source:
+Either download the upgrade binary (`v3.0.0`) or build it from source:
 
 ```
 cd regen-ledger
 git fetch --all
-git checkout v2.0.0
+git checkout v3.0.0
 make install
 ```
 
