docs: v3.0.0 upgrade guide

--- a/docs/migrations/v3.0-upgrade.md
+++ b/docs/migrations/v3.0-upgrade.md
@@ -10,16 +10,11 @@ This document provides guidelines for node operators upgrading from Regen Ledger
 
 ### Regen Mainnet
 
-- [Upgrade Proposal](https://wallet.keplr.app/#/regen/governance?detailId=9)
 - Upgrade Height: `4623339`
 
 ### Redwood Testnet
 
 - Upgrade Height: `TBD`
-
-### Upgrade Handler
-
-- [Upgrade Handler](https://github.com/regen-network/regen-ledger/blob/v3.0.0/app/stable_appconfig.go#L46-L64)
 
 ## Upgrade Guidelines
 
@@ -29,7 +24,7 @@ The latest version of Go (`1.17`) is required. For more information, see [Go](ht
 
 ### Option 1: Using Cosmovisor
 
-The following instructions assume `regen` and `cosmovisor` are already installed and `cosmovisor` is set up as a systemd service. If this is not the case, please refer to the [Running a Validator](../getting-started/running-a-validator.md#install-cosmovisor) for more information.
+The following instructions assume the `regen` and `cosmovisor` binaries are already installed and `cosmovisor` is set up as a systemd service. If this is not the case, please refer to the [Running a Validator](../getting-started/running-a-validator.md#install-cosmovisor) for instructions on how to install and set up the binaries.
 
 Make sure Cosmovisor is up-to-date:
 
@@ -52,8 +47,8 @@ After=network-online.target
 [Service]
 Environment="DAEMON_NAME=regen"
 Environment="DAEMON_HOME=${HOME}/.regen"
-Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=false"
 Environment="DAEMON_RESTART_AFTER_UPGRADE=true"
+Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=false"
 Environment="UNSAFE_SKIP_BACKUP=false"
 User=${USER}
 ExecStart=${GOBIN}/cosmovisor start
@@ -65,16 +60,22 @@ WantedBy=multi-user.target
 " >cosmovisor.service
 ```
 
-Cosmovisor has the ability to automatically download the upgrade binaries if the `upgrade-info` is properly set within the upgrade proposal. It is recommended that validators do not use the auto-download option and that the upgrade binary is prepared manually. If you would still like to enable the auto-download option, update the following environment variable in the systemd configuration:
+Cosmovisor can be configured to automatically download upgrade binaries. It is recommended that validators do not use the auto-download option and that the upgrade binary is prepared manually. If you would like to enable the auto-download option, update the following environment variable in the systemd configuration file:
 
 ```
 Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=true"
 ```
 
-Cosmovisor will automatically create a backup of the `data` directory at the time of the upgrade and before the migration begins. It is recommended that validators create a backup of the data directory. If you would like to disable the auto-back, update the following environment variable in the systemd configuration:
+Cosmovisor will automatically create a backup of the data directory at the time of the upgrade and before the migration. If you would like to disable the auto-backup, update the following environment variable in the systemd configuration file:
 
 ```
 Environment="UNSAFE_SKIP_BACKUP=true"
+```
+
+Move the file to the systemd directory:
+
+```
+sudo mv cosmovisor.service /lib/systemd/system/cosmovisor.service
 ```
 
 Restart `cosmovisor` to ensure the environment variables have been updated:
@@ -94,7 +95,7 @@ git checkout v3.0.0
 make build
 ```
 
-Create the folder for the upgrade binary (`v3.0.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory and that the auto-download option was not enabled:
+Create the folder for the upgrade binary (`v3.0.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory (this step is not required if the auto-download option was enabled):
 
 ```
 mkdir -p $HOME/.regen/cosmovisor/upgrades/v3.0.0/bin
