--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -2,6 +2,8 @@
 
 This document provides guidelines for node operators upgrading from Regen Ledger v1.0 to v2.0. For a general overview of the upgrade process, please refer to [Upgrade Overview](./upgrade.md).
 
+*Update: A patch release (`v2.1.0`) was released soon-after the v2.0 upgrade. This document has been updated to use the `v2.1.0` as the upgrade binary rather than `v2.0.0`.*
+
 ## Upgrade Details
 
 ### Regen Ledger v2.0
@@ -10,16 +12,11 @@ This document provides guidelines for node operators upgrading from Regen Ledger
 
 ### Regen Mainnet
 
-- [Upgrade Proposal](https://wallet.keplr.app/#/regen/governance?detailId=5)
 - Upgrade Height: `3003343`
 
 ### Redwood Testnet
 
 - Upgrade Height: `548703`
-
-### Upgrade Handler
-
-- [Upgrade Handler](https://github.com/regen-network/regen-ledger/blob/v2.0.0/app/stable_appconfig.go#L52-L103)
 
 ## Upgrade Guidelines
 
@@ -29,7 +26,7 @@ The latest version of Go (`1.17`) is required. For more information, see [Go](ht
 
 ### Option 1: Using Cosmovisor
 
-The following instructions assume `regen` and `cosmovisor` are already installed and `cosmovisor` is set up as a systemd service. If this is not the case, please refer to the [Running a Validator](../getting-started/running-a-validator.md#install-cosmovisor) for more information.
+The following instructions assume the `regen` and `cosmovisor` binaries are already installed and `cosmovisor` is set up as a systemd service. If this is not the case, please refer to the [Running a Validator](../getting-started/running-a-validator.md#install-cosmovisor) for instructions on how to install and set up the binaries.
 
 **Cosmovisor v1.0 with the auto-download option disabled is required. Node operators must prepare the upgrade binary in advance.**
 
@@ -71,10 +68,16 @@ WantedBy=multi-user.target
 " >cosmovisor.service
 ```
 
-Cosmovisor will automatically create a backup of the `data` directory at the time of the upgrade and before the migration begins. It is recommended that validators create a backup of the data directory. If you would like to disable the auto-back, update the following environment variable in the systemd configuration:
+Cosmovisor will automatically create a backup of the data directory at the time of the upgrade and before the migration. If you would like to disable the auto-backup, update the following environment variable in the systemd configuration file:
 
 ```
 Environment="UNSAFE_SKIP_BACKUP=true"
+```
+
+Move the file to the systemd directory:
+
+```
+sudo mv cosmovisor.service /lib/systemd/system/cosmovisor.service
 ```
 
 Restart `cosmovisor` to ensure the environment variables have been updated:
@@ -85,23 +88,23 @@ sudo systemctl daemon-reload
 sudo systemctl start cosmovisor
 ```
 
-Either download the upgrade binary (`v2.0.0`) or build it from source:
+Either download the upgrade binary (`v2.1.0`) or build it from source:
 
 ```
 cd regen-ledger
 git fetch --all
-git checkout v2.0.0
+git checkout v2.1.0
 make build
 ```
 
-Create the folder for the upgrade binary (`v2.0.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory:
+Create the folder for the upgrade binary (`v2.1.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory:
 
 ```
 mkdir -p $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
 cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
 ```
 
-At the proposed block height, `cosmovisor` will automatically stop the current binary (`v1.0.0`), set the upgrade binary as the new current binary (`v2.0.0`), and then restart the node.
+At the proposed block height, `cosmovisor` will automatically stop the current binary (`v1.0.0`), set the upgrade binary as the new current binary (`v2.1.0`), and then restart the node.
 
 ### Option 2: Without Cosmovisor
 
@@ -109,12 +112,12 @@ Using Cosmovisor to perform the upgrade is not required. Node operators also hav
 
 When the chain halts at the proposed upgrade height, stop the current process running `regen`.
 
-Either download the upgrade binary (`v2.0.0`) or build it from source:
+Either download the upgrade binary (`v2.1.0`) or build it from source:
 
 ```
 cd regen-ledger
 git fetch --all
-git checkout v2.0.0
+git checkout v2.1.0
 make install
 ```
 
