docs: v3.0.0 upgrade guide

--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -34,6 +34,8 @@ The following instructions assume the `regen` and `cosmovisor` binaries are alre
 The auto-download option is not supported in Cosmovisor v1.0 when upgrading from Regen Ledger 1.0 (because it uses Cosmos SDK v0.42). Enabling the auto-download option will result in an error and a failed restart at the time of the upgrade.
 :::
 
+#### Configure Cosmovisor
+
 Make sure Cosmovisor is up-to-date:
 
 ```
@@ -87,6 +89,8 @@ sudo systemctl stop cosmovisor
 sudo systemctl daemon-reload
 sudo systemctl start cosmovisor
 ```
+
+#### Prepare Upgrade Binary
 
 Either download the upgrade binary (`v2.1.0`) or build it from source:
 
