--- a/docs/migrations/v3.0-upgrade.md
+++ b/docs/migrations/v3.0-upgrade.md
@@ -26,6 +26,8 @@ The latest version of Go (`1.17`) is required. For more information, see [Go](ht
 
 The following instructions assume the `regen` and `cosmovisor` binaries are already installed and `cosmovisor` is set up as a systemd service. If this is not the case, please refer to the [Running a Validator](../getting-started/running-a-validator.md#install-cosmovisor) for instructions on how to install and set up the binaries.
 
+#### Configure Cosmovisor
+
 Make sure Cosmovisor is up-to-date:
 
 ```
@@ -86,6 +88,10 @@ sudo systemctl daemon-reload
 sudo systemctl start cosmovisor
 ```
 
+#### Prepare Upgrade Binary
+
+*Note: The following steps are not required if the auto-download option was enabled.*
+
 Either download the upgrade binary (`v3.0.0`) or build it from source:
 
 ```
@@ -95,7 +101,7 @@ git checkout v3.0.0
 make build
 ```
 
-Create the folder for the upgrade binary (`v3.0.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory (this step is not required if the auto-download option was enabled):
+Create the folder for the upgrade binary (`v3.0.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory:
 
 ```
 mkdir -p $HOME/.regen/cosmovisor/upgrades/v3.0.0/bin
