--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -112,7 +112,7 @@ At the proposed block height, `cosmovisor` will automatically stop the current b
 
 ### Option 2: Without Cosmovisor
 
-Using Cosmovisor to perform the upgrade is not required. Node operators also have the option to manually update the `regen` binary at the time of the upgrade.
+Using Cosmovisor to perform the upgrade is not mandatory. Node operators also have the option to manually update the `regen` binary at the time of the upgrade.
 
 When the chain halts at the proposed upgrade height, stop the current process running `regen`.
 
