--- a/docs/migrations/v2.0-upgrade.md
+++ b/docs/migrations/v2.0-upgrade.md
@@ -28,40 +28,50 @@ The latest version of Go (`1.17`) is required. For more information, see [Go](ht
 
 The following instructions assume the `regen` and `cosmovisor` binaries are already installed and `cosmovisor` is set up as a systemd service. If this is not the case, please refer to the [Running a Validator](../getting-started/running-a-validator.md#install-cosmovisor) for instructions on how to install and set up the binaries.
 
-**Cosmovisor v1.0 with the auto-download option disabled is required. Node operators must prepare the upgrade binary in advance.**
+**Cosmovisor 1.1 with the auto-download option disabled is required. Node operators must prepare the upgrade binary in advance.**
 
 ::: warning
-The auto-download option is not supported in Cosmovisor v1.0 when upgrading from Regen Ledger 1.0 (because it uses Cosmos SDK v0.42). Enabling the auto-download option will result in an error and a failed restart at the time of the upgrade.
+The auto-download option is not supported in Cosmovisor v1.1 when upgrading from Regen Ledger 1.0 (because it uses Cosmos SDK v0.42). Enabling the auto-download option will result in an error and a failed restart at the time of the upgrade.
 :::
 
 #### Configure Cosmovisor
 
-Make sure Cosmovisor is up-to-date:
+*Note: The following steps are not required if you are already using the latest version of Cosmovisor and you already have Cosmovisor configured to your preferred settings.*
 
-```
-go install github.com/cosmos/cosmos-sdk/cosmovisor/cmd/cosmovisor@v1.0
+Make sure the latest version of Cosmovisor is installed (`v1.1.0`):
+
+<!-- TODO: update version and replace with go install once replace directives resolved -->
+
+```bash
+git clone https://github.com/cosmos/cosmos-sdk
+cd cosmos-sdk
+git checkout cosmovisor/v1.1.0
+make cosmovisor
+cp cosmovisor/cosmovisor ~/go/bin/cosmovisor
+cd ~
 ```
 
 Check to ensure the installation was successful:
 
-```
-DAEMON_NAME=regen DAEMON_HOME=~/.regen cosmovisor version
+```bash
+cosmovisor version
 ```
 
 Update `cosmovisor` systemd service file and make sure the environment variables are set to the appropriate values (the following example includes the recommended settings):
 
-```
+```bash
 echo "[Unit]
 Description=Cosmovisor daemon
 After=network-online.target
 [Service]
 Environment="DAEMON_NAME=regen"
 Environment="DAEMON_HOME=${HOME}/.regen"
+Environment="DAEMON_DATA_BACKUP_DIR=${HOME}/backups"
 Environment="DAEMON_RESTART_AFTER_UPGRADE=true"
 Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=false"
 Environment="UNSAFE_SKIP_BACKUP=false"
 User=${USER}
-ExecStart=${GOBIN}/cosmovisor start
+ExecStart=${GOBIN}/cosmovisor run
 Restart=always
 RestartSec=3
 LimitNOFILE=4096
@@ -72,29 +82,41 @@ WantedBy=multi-user.target
 
 Cosmovisor will automatically create a backup of the data directory at the time of the upgrade and before the migration. If you would like to disable the auto-backup, update the following environment variable in the systemd configuration file:
 
-```
+```bash
 Environment="UNSAFE_SKIP_BACKUP=true"
 ```
 
 Move the file to the systemd directory:
 
-```
+```bash
 sudo mv cosmovisor.service /lib/systemd/system/cosmovisor.service
+```
+
+Create backups directory (if directory does not already exist):
+
+```bash
+mkdir ${HOME}/backups
 ```
 
 Restart `cosmovisor` to ensure the environment variables have been updated:
 
-```
+```bash
 sudo systemctl stop cosmovisor
 sudo systemctl daemon-reload
 sudo systemctl start cosmovisor
+```
+
+Check the status of the `cosmovisor` service:
+
+```bash
+sudo systemctl status cosmovisor
 ```
 
 #### Prepare Upgrade Binary
 
 Either download the upgrade binary (`v2.1.0`) or build it from source:
 
-```
+```bash
 cd regen-ledger
 git fetch --all
 git checkout v2.1.0
@@ -103,7 +125,7 @@ make build
 
 Create the folder for the upgrade binary (`v2.1.0`) and copy the `regen` binary into the folder. This next step assumes that the `regen` binary was built from source and stored in the `build` directory:
 
-```
+```bash
 mkdir -p $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
 cp $HOME/regen-ledger/build/regen $HOME/.regen/cosmovisor/upgrades/v2.0-upgrade/bin
 ```
@@ -118,7 +140,7 @@ When the chain halts at the proposed upgrade height, stop the current process ru
 
 Either download the upgrade binary (`v2.1.0`) or build it from source:
 
-```
+```bash
 cd regen-ledger
 git fetch --all
 git checkout v2.1.0
@@ -127,7 +149,7 @@ make install
 
 Ensure the `regen` binary has been updated:
 
-```
+```bash
 regen version
 ```
 
