--- a/docs/migrations/v3.0-upgrade.md
+++ b/docs/migrations/v3.0-upgrade.md
@@ -26,21 +26,16 @@ The latest version of Go (`1.17`) is required. For more information, see [Go](ht
 
 The following instructions assume the `regen` and `cosmovisor` binaries are already installed and `cosmovisor` is set up as a systemd service. If this is not the case, please refer to the [Running a Validator](../getting-started/running-a-validator.md#install-cosmovisor) for instructions on how to install and set up the binaries.
 
+**Cosmovisor 1.0 is required.**
+
 #### Configure Cosmovisor
 
-*Note: The following steps are not required if you are already using the latest version of Cosmovisor and you already have Cosmovisor configured to your preferred settings.*
+*Note: The following steps are not required if Cosmovisor v1.0 is already installed and configured to your preferred settings.*
 
-Make sure the latest version of Cosmovisor is installed (`v1.1.0`):
-
-<!-- TODO: update version and replace with go install once replace directives resolved -->
+To install `cosmovisor`, run the following command:
 
 ```bash
-git clone https://github.com/cosmos/cosmos-sdk
-cd cosmos-sdk
-git checkout cosmovisor/v1.1.0
-make cosmovisor
-cp cosmovisor/cosmovisor ~/go/bin/cosmovisor
-cd ~
+go install github.com/cosmos/cosmos-sdk/cosmovisor/cmd/cosmovisor@v1.0
 ```
 
 Check to ensure the installation was successful:
@@ -58,12 +53,11 @@ After=network-online.target
 [Service]
 Environment="DAEMON_NAME=regen"
 Environment="DAEMON_HOME=${HOME}/.regen"
-Environment="DAEMON_DATA_BACKUP_DIR=${HOME}/backups"
 Environment="DAEMON_RESTART_AFTER_UPGRADE=true"
 Environment="DAEMON_ALLOW_DOWNLOAD_BINARIES=false"
 Environment="UNSAFE_SKIP_BACKUP=false"
 User=${USER}
-ExecStart=${GOBIN}/cosmovisor run
+ExecStart=${GOBIN}/cosmovisor start
 Restart=always
 RestartSec=3
 LimitNOFILE=4096
@@ -88,12 +82,6 @@ Move the file to the systemd directory:
 
 ```bash
 sudo mv cosmovisor.service /lib/systemd/system/cosmovisor.service
-```
-
-Create backups directory (if directory does not already exist):
-
-```bash
-mkdir ${HOME}/backups
 ```
 
 Restart `cosmovisor` to ensure the environment variables have been updated:
